Update SimulationMojo.java